@@ -18,6 +18,7 @@ Build-Depends: autotools-dev,
                libreadline6-dev,
                libssl-dev,
                libyaml-dev,
+               netbase,
                openssl,
                procps,
                ruby | ruby-interpreter | ruby1.8,
