@@ -68,6 +68,9 @@ override_dh_auto_clean:
 override_dh_auto_build-arch:
 	dh_auto_build -- main V=1
 
+override_dh_auto_test-arch:
+	$(MAKE) check V=1
+
 override_dh_auto_install-arch:
 	$(MAKE) install-nodoc V=1 DESTDIR=$(CURDIR)/debian/tmp
 	# remove RPATH from tcltklib bindings
