@@ -3,6 +3,7 @@ ruby2.3 (2.3.1-3) UNRELEASED; urgency=medium
   * Replace libruby2.3-dbg with automatic dbgsym packages.
   * Avoid unreproducible rbconfig.rb (always use bash to build).
   * rdoc: sort input filenames in a consistent way (for reproducible).
+  * Run full testsuite during build (make check instead of make test).
 
  -- Christian Hofstaedtler <zeha@debian.org>  Mon, 06 Jun 2016 12:39:40 +0000
 
